# elk-confd-parser

./: Makefile  README.md  setup.cfg  tox.ini
.github/workflows/: on_pull_request.yml
elkconfdparser/: __main__.py  cli.py  errors.py  parser.py
tests/: common.py  test_parser.py  test_version.py
